--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.2.3",
     "redux": "^5.0.1",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
